--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "env-cmd": "^10.1.0",
     "normalize.css": "^8.0.1",
     "ra-data-json-server": "^4.1.2",
     "react": "^18.1.0",
@@ -24,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:dev": "env-cmd -f ./.env.development npm run build",
+    "build:prod": "env-cmd -f ./.env.production npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
