--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hungntsol/env": "^1.0.0",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "@reduxjs/toolkit": "^1.8.2",
@@ -24,9 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "./start-dev.sh",
     "build": "react-scripts build",
-    "build:dev": "env-cmd -f ./.env.development npm run build",
-    "build:prod": "env-cmd -f ./.env.production npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
